--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,4 +1,4 @@
-name: generate animation
+name: snake
 
 on:
   # run automatically every 2 hours
@@ -13,8 +13,6 @@ on:
     branches:
     - master
   
-  
-
 jobs:
   generate:
     permissions: 
