--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -31,11 +31,9 @@ jobs:
           config_timezone: Asia/Shanghai
           plugin_achievements: yes
           plugin_achievements_display: compact
+          plugin_achievements_limit: 5
           plugin_achievements_secrets: yes
           plugin_achievements_threshold: C
-          plugin_followup: yes
-          plugin_followup_archived: yes
-          plugin_followup_sections: repositories
           plugin_introduction: yes
           plugin_introduction_title: yes
           plugin_isocalendar: yes
@@ -52,6 +50,6 @@ jobs:
           plugin_languages_sections: most-used
           plugin_languages_threshold: 0%
           plugin_people: yes
-          plugin_people_limit: 5
+          plugin_people_limit: 12
           plugin_people_size: 28
           plugin_people_types: followers, following
