--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -52,4 +52,4 @@ jobs:
           plugin_people: yes
           plugin_people_limit: 12
           plugin_people_size: 28
-          plugin_people_types: followers, following
+          plugin_people_types: followers
