--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -27,11 +27,11 @@ jobs:
           # Options
           template: classic
           base: header, activity, community, repositories, metadata
-          config_display: large
+          config_display: columns
           config_timezone: Asia/Shanghai
           plugin_achievements: yes
           plugin_achievements_display: compact
-          plugin_achievements_limit: 12
+          plugin_achievements_limit: 5
           plugin_achievements_secrets: yes
           plugin_achievements_threshold: C
           plugin_introduction: yes
@@ -50,6 +50,6 @@ jobs:
           plugin_languages_sections: most-used
           plugin_languages_threshold: 0%
           plugin_people: yes
-          plugin_people_limit: 25
+          plugin_people_limit: 12
           plugin_people_size: 28
           plugin_people_types: followers
