--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -27,17 +27,20 @@ jobs:
           # Options
           template: classic
           base: header, activity, community, repositories, metadata
-          config_display: columns
+          config_display: large
           config_timezone: Asia/Shanghai
           plugin_achievements: yes
           plugin_achievements_display: compact
-          plugin_achievements_limit: 5
+          plugin_achievements_limit: 11
           plugin_achievements_secrets: yes
           plugin_achievements_threshold: C
+          plugin_followup: yes
+          plugin_followup_archived: yes
+          plugin_followup_sections: repositories
           plugin_introduction: yes
           plugin_introduction_title: yes
           plugin_isocalendar: yes
-          plugin_isocalendar_duration: half-year
+          plugin_isocalendar_duration: full-year
           plugin_languages: yes
           plugin_languages_analysis_timeout: 15
           plugin_languages_analysis_timeout_repositories: 7.5
@@ -50,6 +53,7 @@ jobs:
           plugin_languages_sections: most-used
           plugin_languages_threshold: 0%
           plugin_people: yes
-          plugin_people_limit: 12
+          plugin_people_limit: 25
+          plugin_people_shuffle: yes
           plugin_people_size: 28
           plugin_people_types: followers
