--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -26,7 +26,7 @@ jobs:
 
           # Options
           template: classic
-          base: header, activity, community, repositories, metadata
+          base: header, activity
           config_display: large
           config_timezone: Asia/Shanghai
           plugin_followup: yes
@@ -35,7 +35,7 @@ jobs:
           plugin_introduction: yes
           plugin_introduction_title: yes
           plugin_isocalendar: yes
-          plugin_isocalendar_duration: full-year
+          plugin_isocalendar_duration: half-year
           plugin_languages: yes
           plugin_languages_analysis_timeout: 15
           plugin_languages_analysis_timeout_repositories: 7.5
@@ -50,5 +50,9 @@ jobs:
           plugin_people: yes
           plugin_people_limit: 24
           plugin_people_shuffle: yes
-          plugin_people_size: 30
+          plugin_people_size: 28
           plugin_people_types: followers
+          plugin_topics: yes
+          plugin_topics_limit: 0
+          plugin_topics_mode: icons
+          plugin_topics_sort: stars
