--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -29,18 +29,12 @@ jobs:
           base: header, activity
           config_display: large
           config_timezone: Asia/Shanghai
-          plugin_code: yes
-          plugin_code_days: 3
-          plugin_code_lines: 12
-          plugin_code_load: 400
-          plugin_code_visibility: public
           plugin_followup: yes
           plugin_followup_archived: yes
-          plugin_followup_indepth: yes
           plugin_followup_sections: repositories
           plugin_habits: yes
           plugin_habits_charts: yes
-          plugin_habits_charts_type: chartist
+          plugin_habits_charts_type: classic
           plugin_habits_days: 14
           plugin_habits_facts: yes
           plugin_habits_from: 200
@@ -55,7 +49,6 @@ jobs:
           plugin_languages_analysis_timeout_repositories: 7.5
           plugin_languages_categories: markup, programming
           plugin_languages_colors: github
-          plugin_languages_indepth: yes
           plugin_languages_limit: 8
           plugin_languages_recent_categories: markup, programming
           plugin_languages_recent_days: 14
@@ -64,5 +57,10 @@ jobs:
           plugin_languages_threshold: 0%
           plugin_people: yes
           plugin_people_limit: 24
+          plugin_people_shuffle: yes
           plugin_people_size: 28
           plugin_people_types: followers
+          plugin_topics: yes
+          plugin_topics_limit: 15
+          plugin_topics_mode: icons
+          plugin_topics_sort: stars
