--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -27,6 +27,7 @@ jobs:
           # Options
           template: classic
           base: header, activity
+          config_padding: 0, 0
           config_display: large
           config_timezone: Asia/Shanghai
           plugin_followup: yes
