--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -26,16 +26,23 @@ jobs:
 
           # Options
           template: classic
-          base: header, activity
+          base: header, activity, repositories
           config_padding: 0, 70
           config_display: large
           config_timezone: Asia/Shanghai
+          plugin_activity: yes
+          plugin_activity_days: 14
+          plugin_activity_filter: all
+          plugin_activity_limit: 5
+          plugin_activity_load: 300
+          plugin_activity_timestamps: yes
+          plugin_activity_visibility: all
           plugin_followup: yes
           plugin_followup_archived: yes
           plugin_followup_sections: repositories
           plugin_habits: yes
           plugin_habits_charts: yes
-          plugin_habits_charts_type: graph
+          plugin_habits_charts_type: chartist
           plugin_habits_days: 14
           plugin_habits_facts: yes
           plugin_habits_from: 200
