--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -48,8 +48,6 @@ jobs:
           plugin_habits_from: 200
           plugin_habits_languages_limit: 8
           plugin_habits_languages_threshold: 0%
-          plugin_introduction: yes
-          plugin_introduction_title: yes
           plugin_isocalendar: yes
           plugin_isocalendar_duration: full-year
           plugin_languages: yes
@@ -70,5 +68,5 @@ jobs:
           plugin_people_types: followers
           plugin_topics: yes
           plugin_topics_limit: 0
-          plugin_topics_mode: mastered
+          plugin_topics_mode: starred
           plugin_topics_sort: stars
