--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -27,7 +27,7 @@ jobs:
           # Options
           template: classic
           base: header, activity, repositories
-          config_padding: 0, 8 + 11%
+          config_padding: 0, 35
           config_display: large
           config_timezone: Asia/Shanghai
           plugin_activity_timestamps: yes
