--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -27,7 +27,7 @@ jobs:
           # Options
           template: classic
           base: header, activity, repositories
-          config_padding: 0, 8 + 11%
+          config_padding: 0, 0
           config_display: large
           config_timezone: Asia/Shanghai
           plugin_activity_timestamps: yes
@@ -43,8 +43,6 @@ jobs:
           plugin_habits_from: 200
           plugin_habits_languages_limit: 8
           plugin_habits_languages_threshold: 0%
-          plugin_isocalendar: yes
-          plugin_isocalendar_duration: full-year
           plugin_languages: yes
           plugin_languages_analysis_timeout: 15
           plugin_languages_analysis_timeout_repositories: 7.5
