--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -29,6 +29,7 @@ jobs:
           base: header, activity, repositories
           config_display: large
           config_timezone: Asia/Shanghai
+          config_padding: 0, 8 + 5%
           plugin_activity_timestamps: yes
           plugin_activity_visibility: all
           plugin_followup: yes
