--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -29,7 +29,7 @@ jobs:
           base: header, activity, repositories
           config_display: large
           config_timezone: Asia/Shanghai
-          config_padding: 0, 8 + 5%
+          config_padding: 0, 8 + 6%
           plugin_activity_timestamps: yes
           plugin_activity_visibility: all
           plugin_followup: yes
@@ -56,6 +56,10 @@ jobs:
           plugin_languages_recent_load: 300
           plugin_languages_sections: most-used
           plugin_languages_threshold: 0%
+          plugin_stargazers: yes
+          plugin_stargazers_charts: yes
+          plugin_stargazers_charts_type: classic
+          plugin_stargazers_days: 14
           plugin_topics: yes
           plugin_topics_limit: 0
           plugin_topics_mode: starred
