--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -58,5 +58,5 @@ jobs:
           plugin_languages_threshold: 0%
           plugin_topics: yes
           plugin_topics_limit: 0
-          plugin_topics_mode: starred
+          plugin_topics_mode: icons
           plugin_topics_sort: stars
