--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -29,7 +29,7 @@ jobs:
           base: header, activity, repositories
           config_display: large
           config_timezone: Asia/Shanghai
-          config_padding: 0, 0
+          config_padding: 0, 8 + 11%
           plugin_activity_timestamps: yes
           plugin_activity_visibility: all
           plugin_followup: yes
