--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -26,11 +26,11 @@ jobs:
 
           # Options
           template: classic
-          base: header, activity, repositories, topics, followup, habits, wakatime, isocalendar
+          base: header, activity, repositories, 
           config_display: large
           config_timezone: Asia/Shanghai
-          config_padding: 0, 8 + 11%
-          config_order: base.header, languages
+          config_padding: 0, 5
+          config_order: base.header, languages, topics, followup, habits, wakatime, isocalendar
           plugin_activity_timestamps: yes
           plugin_activity_visibility: all
           plugin_followup: yes
