--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -30,7 +30,7 @@ jobs:
           config_display: large
           config_timezone: Asia/Shanghai
           config_padding: 0, 5
-          config_order: base.header, languages, topics, followup, habits, wakatime, isocalendar
+          config_order: base.header, base.activity, base.repositories, topics, followup, languages,  habits, wakatime, isocalendar
           plugin_activity_timestamps: yes
           plugin_activity_visibility: all
           plugin_followup: yes
