--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -26,11 +26,21 @@ jobs:
 
           # Options
           template: classic
-          base: header, activity, repositories, 
+          base: header, activity, repositories,
+          extras_css: |
+            h1,h2,h3,h4,h5,h6 {
+              color: black;
+            }
+            h1 {
+              text-size: 16px;
+            }
+            h2 {
+              text-size: 14px;
+            }
           config_display: large
           config_timezone: Asia/Shanghai
           config_padding: 0, 5
-          config_order: base.header, base.activity, base.repositories, topics, followup, languages,  habits, wakatime, isocalendar
+          config_order: base.header, base.activity+community, base.repositories, topics, followup, languages,  habits, wakatime, isocalendar
           plugin_activity_timestamps: yes
           plugin_activity_visibility: all
           plugin_followup: yes
