--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -29,15 +29,14 @@ jobs:
           base: header, activity, repositories
           config_display: large
           config_timezone: Asia/Shanghai
-          config_padding: 0, 5%
-          config_order: base.header, base.activity+community, base.repositories, topics, followup, stargazers, languages,  habits, wakatime, isocalendar
+          config_padding: 0, 3%
+          config_order: base.header, base.activity+community, base.repositories, followup, topics, stargazers, languages,  habits, wakatime, isocalendar
           plugin_activity_timestamps: yes
           plugin_activity_visibility: all
           plugin_stargazers: yes
           plugin_stargazers_charts: yes
           plugin_stargazers_charts_type: classic
           plugin_stargazers_days: 14
-          plugin_stargazers_worldmap: yes
           plugin_followup: yes
           plugin_followup_archived: yes
           plugin_followup_sections: repositories
