--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -46,7 +46,7 @@ jobs:
           plugin_habits_days: 14
           plugin_habits_facts: yes
           plugin_habits_from: 200
-          plugin_habits_languages_limit: disable
+          plugin_habits_languages_limit: 8
           plugin_isocalendar: yes
           plugin_isocalendar_duration: full-year
           plugin_languages: yes
