--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -30,7 +30,7 @@ jobs:
           config_display: large
           config_timezone: Asia/Shanghai
           config_padding: 0, 3%
-          config_order: base.header, base.activity+community, base.repositories, followup, topics, stargazers, languages, habits, wakatime, isocalendar
+          config_order: base.header, base.activity+community, base.repositories, followup, topics, stargazers, languages, wakatime, isocalendar
           plugin_activity_timestamps: yes
           plugin_activity_visibility: all
           plugin_stargazers: yes
@@ -40,13 +40,6 @@ jobs:
           plugin_followup: yes
           plugin_followup_archived: yes
           plugin_followup_sections: repositories
-          plugin_habits: yes
-          plugin_habits_charts: yes
-          plugin_habits_charts_type: classic
-          plugin_habits_days: 14
-          plugin_habits_facts: yes
-          plugin_habits_from: 200
-          plugin_habits_languages_limit: 8
           plugin_isocalendar: yes
           plugin_isocalendar_duration: full-year
           plugin_languages: yes
