--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -30,16 +30,19 @@ jobs:
           config_display: large
           config_timezone: Asia/Shanghai
           config_padding: 0, 3%
-          config_order: base.header, base.activity+community, base.repositories, followup, topics, stargazers, languages, wakatime, isocalendar
+          config_order: base.header, base.activity+community, base.repositories, followup, topics, stargazers, habits, languages, wakatime, isocalendar
           plugin_activity_timestamps: yes
           plugin_activity_visibility: all
           plugin_stargazers: yes
           plugin_stargazers_charts: yes
           plugin_stargazers_charts_type: classic
           plugin_stargazers_days: 14
+          plugin_habits: yes
+          plugin_habits_facts: yes
+          plugin_habits_charts: yes
           plugin_followup: yes
           plugin_followup_archived: yes
-          plugin_followup_sections: repositories
+          plugin_followup_sections: repositories, user
           plugin_isocalendar: yes
           plugin_isocalendar_duration: full-year
           plugin_languages: yes
