--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -28,9 +28,8 @@ jobs:
           template: classic
           base: header, activity, repositories
           config_display: large
-          config_timezone: Asia/Shanghai
           config_padding: 0, 3%
-          config_order: base.header, base.activity+community, base.repositories, followup, topics, stargazers, habits, languages, wakatime, isocalendar
+          config_order: base.header, base.activity+community, base.repositories, topics, followup, stargazers, habits, languages, wakatime, isocalendar
           plugin_activity_timestamps: yes
           plugin_activity_visibility: all
           plugin_stargazers: yes
@@ -38,8 +37,10 @@ jobs:
           plugin_stargazers_charts_type: classic
           plugin_stargazers_days: 14
           plugin_habits: yes
+          plugin_habits_from: 200
           plugin_habits_facts: yes
           plugin_habits_charts: yes
+          config_timezone: Asia/Shanghai
           plugin_followup: yes
           plugin_followup_archived: yes
           plugin_followup_sections: repositories, user
