--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -29,23 +29,32 @@ jobs:
           base: header, activity, repositories
           config_display: large
           config_padding: 0, 3%
-          config_order: base.header, base.activity+community, base.repositories, topics, followup, stargazers, habits, languages, wakatime, isocalendar
+          config_timezone: Asia/Shanghai
+          config_order: base.header, base.activity+community, base.repositories, topics, followup, stargazers, habits, lines, languages, wakatime, isocalendar
+          
           plugin_activity_timestamps: yes
           plugin_activity_visibility: all
+          
           plugin_stargazers: yes
           plugin_stargazers_charts: yes
           plugin_stargazers_charts_type: classic
           plugin_stargazers_days: 14
+          
           plugin_habits: yes
-          plugin_habits_from: 200
+          plugin_habits_from: 300
           plugin_habits_facts: yes
           plugin_habits_charts: yes
-          config_timezone: Asia/Shanghai
+
+          plugin_lines: yes
+          plugin_lines_delay: 30
+          
           plugin_followup: yes
           plugin_followup_archived: yes
           plugin_followup_sections: repositories, user
+          
           plugin_isocalendar: yes
           plugin_isocalendar_duration: full-year
+          
           plugin_languages: yes
           plugin_languages_analysis_timeout: 15
           plugin_languages_analysis_timeout_repositories: 7.5
@@ -57,10 +66,12 @@ jobs:
           plugin_languages_recent_load: 300
           plugin_languages_sections: most-used
           plugin_languages_threshold: 0%
+          
           plugin_topics: yes
           plugin_topics_limit: 0
           plugin_topics_mode: icons
           plugin_topics_sort: stars
+          
           plugin_wakatime: yes
           plugin_wakatime_days: 7
           plugin_wakatime_limit: 5
