--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -40,13 +40,15 @@ jobs:
           plugin_stargazers_charts_type: classic
           plugin_stargazers_days: 14
           
-          plugin_habits: yes
-          plugin_habits_from: 300
-          plugin_habits_facts: yes
-          plugin_habits_charts: yes
+          plugin_habits: true
+          plugin_habits_days: 14
+          plugin_habits_facts: true
+          plugin_habits_charts: true
+          plugin_habits_from: 200
 
-          plugin_lines: yes
-          plugin_lines_delay: 30
+          plugin_lines: true
+          plugin_lines_sections: base, repositories, history
+          plugin_lines_repositories_limit: 3
           
           plugin_followup: yes
           plugin_followup_archived: yes
