--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -30,7 +30,7 @@ jobs:
           config_display: large
           config_padding: 0, 3%
           config_timezone: Asia/Shanghai
-          config_order: base.header, base.activity+community, base.repositories, topics, followup, stargazers, habits, lines, languages, wakatime, isocalendar
+          config_order: base.header, base.activity+community, base.repositories, topics, lines, followup, stargazers, habits, languages, wakatime, isocalendar
           
           plugin_activity_timestamps: yes
           plugin_activity_visibility: all
@@ -47,7 +47,7 @@ jobs:
           plugin_habits_from: 200
 
           plugin_lines: true
-          plugin_lines_sections: base, repositories, history
+          plugin_lines_sections: base
           plugin_lines_repositories_limit: 3
           
           plugin_followup: yes
@@ -58,16 +58,9 @@ jobs:
           plugin_isocalendar_duration: full-year
           
           plugin_languages: yes
-          plugin_languages_analysis_timeout: 15
-          plugin_languages_analysis_timeout_repositories: 7.5
-          plugin_languages_categories: markup, programming
           plugin_languages_colors: github
           plugin_languages_limit: 8
-          plugin_languages_recent_categories: markup, programming
-          plugin_languages_recent_days: 14
-          plugin_languages_recent_load: 300
           plugin_languages_sections: most-used
-          plugin_languages_threshold: 0%
           
           plugin_topics: yes
           plugin_topics_limit: 0
