--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -39,6 +39,12 @@ jobs:
           plugin_stargazers_charts: yes
           plugin_stargazers_charts_type: classic
           plugin_stargazers_days: 14
+
+          plugin_languages: yes
+          plugin_languages_indepth: yes
+          plugin_languages_details: lines, bytes-size
+          plugin_languages_limit: 4
+          plugin_languages_analysis_timeout: 15
           
           plugin_habits: true
           plugin_habits_days: 14
