--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -30,7 +30,7 @@ jobs:
           config_display: large
           config_padding: 0, 3%
           config_timezone: Asia/Shanghai
-          config_order: base.header, base.activity+community, base.repositories, topics, lines, followup, stargazers, habits, languages, wakatime, isocalendar
+          config_order: base.header, base.activity+community, base.repositories, topics, followup, stargazers, languages, wakatime, isocalendar
           
           plugin_activity_timestamps: yes
           plugin_activity_visibility: all
@@ -45,15 +45,6 @@ jobs:
           plugin_languages_details: lines, bytes-size
           plugin_languages_limit: 4
           plugin_languages_analysis_timeout: 15
-          
-          plugin_habits: true
-          plugin_habits_days: 14
-          plugin_habits_facts: true
-          plugin_habits_charts: true
-          plugin_habits_from: 200
-
-          plugin_lines: true
-          plugin_lines_sections: base
           
           plugin_followup: yes
           plugin_followup_archived: yes
